# coda-stage-4

./: .gitignore  CMakeLists.txt
cuda-fixnum/: compile.cu
cuda-fixnum/array/: fixnum_array.cu  fixnum_array.h
cuda-fixnum/fixnum/: word_fixnum.cu
cuda-fixnum/fixnum/internal/: primitives.cu
cuda-fixnum/functions/internal/: modexp_impl.cu
cuda-fixnum/modnum/: modnum_monty_cios.cu  modnum_monty_redc.cu
depends/: CMakeLists.txt
depends/libff/libff/algebra/scalar_multiplication/: multiexp.tcc
src/: constants.hpp  cpu_compute.cpp  cpu_compute.hpp  gpu_constants.cuh  gpu_fq.cu  gpu_fq.cuh  gpu_fq2.cu  gpu_fq2.cuh  gpu_fq3.cu  gpu_fq3.cuh  gpu_g1.cu  gpu_g1.cuh  gpu_g2.cu  gpu_g2.cuh  gpu_groth16_input.cu  gpu_groth16_input.cuh  gpu_groth16_params.cu  gpu_groth16_params.cuh  gpu_params.cu  gpu_params.cuh  gpu_prepare.cu  gpu_prepare.cuh  gpu_preprocess.cuh  gpu_utils.cu  gpu_utils.cuh  groth16_input.cpp  groth16_input.hpp  groth16_output.cpp  groth16_output.hpp  groth16_params.cpp  groth16_params.hpp  io.cpp  io.hpp  knary.cu  knary.cuh  libff_convert.cpp  libff_convert.hpp  main.cu  multiexp.cu  multiexp.cuh  (+15 more)
